--- a/static/configuration.json
+++ b/static/configuration.json
@@ -1,8 +1,8 @@
 {
     "githubUsername": "earnan",
-    "blogTitle": "Laziji",
-    "blogDescribe": "欢迎来到辣子鸡的个人博客。",
-    "htmlTitle": "辣子鸡的博客",
+    "blogTitle": "1450304",
+    "blogDescribe": "欢迎来到这不是博客。",
+    "htmlTitle": "这不是个博客",
     "fontColor": "#ffffff",
     "useBackgroundImage": false,
     "backgroundColorLeft": "#2690F9",
